[gd_scene load_steps=5 format=2]

[ext_resource path="res://Fonts/comicbd.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Sprites/Overlays/trapdoor-lock.png" type="Texture" id=2]
[ext_resource path="res://Overlays/TrapdoorLock.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 256
font_data = ExtResource( 1 )

[node name="Image" type="TextureRect"]
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2
texture = ExtResource( 2 )
script = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="Digit1" type="Label" parent="."]
margin_left = 413.0
margin_top = 239.0
margin_right = 682.0
margin_bottom = 608.0
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1
valign = 1

[node name="Digit2" type="Label" parent="."]
margin_left = 807.0
margin_top = 239.0
margin_right = 1076.0
margin_bottom = 608.0
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1
valign = 1

[node name="Digit3" type="Label" parent="."]
margin_left = 1210.0
margin_top = 239.0
margin_right = 1479.0
margin_bottom = 608.0
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1
valign = 1

[node name="D1up" type="TextureButton" parent="."]
margin_left = 428.0
margin_top = 150.0
margin_right = 670.0
margin_bottom = 231.0
mouse_default_cursor_shape = 3

[node name="D2up" type="TextureButton" parent="."]
margin_left = 824.0
margin_top = 150.0
margin_right = 1066.0
margin_bottom = 231.0
mouse_default_cursor_shape = 3

[node name="D3up" type="TextureButton" parent="."]
margin_left = 1224.0
margin_top = 150.0
margin_right = 1466.0
margin_bottom = 231.0
mouse_default_cursor_shape = 3

[node name="D1down" type="TextureButton" parent="."]
margin_left = 428.0
margin_top = 620.0
margin_right = 670.0
margin_bottom = 701.0
mouse_default_cursor_shape = 10

[node name="D2down" type="TextureButton" parent="."]
margin_left = 824.0
margin_top = 620.0
margin_right = 1066.0
margin_bottom = 701.0
mouse_default_cursor_shape = 10

[node name="D3down" type="TextureButton" parent="."]
margin_left = 1224.0
margin_top = 620.0
margin_right = 1466.0
margin_bottom = 701.0
mouse_default_cursor_shape = 10

[connection signal="pressed" from="D1up" to="." method="_on_D1up_pressed"]
[connection signal="pressed" from="D2up" to="." method="_on_D2up_pressed"]
[connection signal="pressed" from="D3up" to="." method="_on_D3up_pressed"]
[connection signal="pressed" from="D1down" to="." method="_on_D1down_pressed"]
[connection signal="pressed" from="D2down" to="." method="_on_D2down_pressed"]
[connection signal="pressed" from="D3down" to="." method="_on_D3down_pressed"]
